rnsc/test_data/integration/error/parser/type_hints/utf8/trailing_tokens.rns
.class @utf8 value unexpected_second_operand
.super java/lang/Object